setup/registry/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docker-registry
spec:
  serviceName: registry
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      name: docker-registry
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: registry-data
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5000
      volumes:
      - name: registry-data
        persistentVolumeClaim:
          claimName: registry-pvc
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - node-1
