setup/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  type: ClusterIP
  selector:
    app: docker-registry
  ports:
  - port: 5000
    targetPort: 5000
